fix: enable swipe carousel on mobile fullscreen card from chat

--- a/src/components/FoodPlaceList/Card/Images/FoodPlaceImages.scss
+++ b/src/components/FoodPlaceList/Card/Images/FoodPlaceImages.scss
@@ -88,15 +88,27 @@ $fullScreenImageHeight: 100%;
                 > .food-place-images {
                     width: 100%;
                     height: 200px;
+                    overflow-x: auto;
+                    scroll-snap-type: x mandatory;
+                    -ms-overflow-style: none;
+                    scrollbar-width: none;
+                    &::-webkit-scrollbar {
+                        display: none;
+                    }
                     > .food-place-image-container {
+                        min-width: 100%;
                         width: 100%;
                         height: 200px;
+                        scroll-snap-align: start;
                         > img {
                             width: 100%;
                             height: 200px;
                             border-radius: 8px 8px 0 0;
                         }
                     }
+                }
+                > .carousel-button {
+                    display: none;
                 }
             }
         }
